# MyStudy

./: .gitignore  README.md
Dart/: classTest.dart  test.dart
Dart/my_flutter/: README.md  pubspec.yaml
Dart/my_flutter/lib/: DioUtil.dart  SnackBarUtil.dart  UserStore.dart  main.dart  main.dart.bak  main_base.dart  main_image.dart  main_login.dart  main_route.dart
Dart/my_flutter/test/: widget_test.dart
Dart/my_flutter/web/: index.html
Dart/my_flutter/windows/runner/: Runner.rc
FastAPI/: curd.py  dbConfig.py  main.py.bak  middleware.py  model.py  pyproject.toml  test.html
FastAPI2/myproject/: main.py  pyproject.toml
FastAPI_DDD/: curd.py  main.py  model.py  orm.py  pyproject.toml  requirements.txt
FastAPI_DDD/common/middleware/: my_middleware.py
FastAPI_DDD/config/: dbConfig.py  settngs.py
FastAPI_DDD/reqApp/: __init__.py  userApp.py
LangChain/: LCEL.py  agents.py  db.py  main.py  memory.py  model.py  outparser.py  pyproject.toml  requirements.txt  test.txt  tools.py
LangChain4j/: pom.xml
LangChain4j/src/main/java/com/example/demo/: LangChain4jApplication.java  Test.java
LangChain4j/src/main/java/com/example/demo/app/: TestController.java
LangChain4j/src/main/java/com/example/demo/config/: ConfigModel.java
LangChain4j/src/main/java/com/example/demo/service/: Assistant.java  AsyncTaskService.java
LangChain4j/src/main/java/com/example/demo/tools/: MovieTools.java  WeatherTools.java
LangChain4j/src/main/java/com/example/demo/utils/: ToolsResult.java
LangChain4j/src/main/resources/: application-dev.yaml  application.yaml
LangChain4j/src/test/java/com/example/demo/: AsyncTaskTest.java  ChatMemoryTest.java  ChatModelTest.java  RagTest.java  ToolsTest.java
MYMCP/: db_server.py  mcpServer.py  mcp_logger.py  news.txt  output.txt  pyproject.toml  rag.py  rag_test.py  requirements.txt  result.txt  speak.py  summary.md  summary.txt  translate.py
MyAgent/: extract_json.py  main.py  mcpClient.py.bak  mcpServer.py  output.sql  pyproject.toml  readfile.py  test.py  uv.toml
(+2 files in other folders)
